2008-01-07  Akim Demaille  <demaille@gostai.com>

	sched.hh.
	* sched.hh, sched.cc: New.
	* Makefile.am, libport-sources.mk: Adjust.

2008-01-07  Matthieu Nottale  <nottale@gostai.com>

	Typedef for utime() return type, move it into its own .cc.
	* libport-sources.mk: Add utime.cc
	* utime.cc: New. utime() implementation.
	* utime.hh: typedef return type.

2008-01-04  Akim Demaille  <demaille@gostai.com>

	unref_traits.
	* select-ref.hh (unref_traits): New.

2008-01-04  Akim Demaille  <demaille@gostai.com>,
		  Guillaume Deslandes  <deslandes@gostai.com>

	GNU Make portability.
	* Makefile.am (check-local): Force the invocation of a shell.

2008-01-03  Akim Demaille  <demaille@gostai.com>

	Fix config.h uses.
	* Makefile.am (check-local): New.
	* unistd.h: Use libport's config.h.

2008-01-03  Akim Demaille  <demaille@gostai.com>

	Don't use maud_CPPFLAGS uselessly.
	* Makefile.am: So that Automake doesn't feel obliged to create
	special compilation rules with libport_la- prefixed object files.

2008-01-03  Akim Demaille  <demaille@gostai.com>,
		  Matthieu Nottale  <nottale@gosta.com>

	Solve an OSX issue: two remote components *can* overlap.
	* semaphore.hxx (Semaphore::Semaphore): Pass O_EXCL so
	that we never use twice the same sem.
	Use the PID to be sure that two processes do not use the
	same sem...

2008-01-03  Akim Demaille  <demaille@gostai.com>

	Better PackageInfo use.
	* package-info.hh, package-info.cc (<<): Move into the libport
	name space.
	Report the signature instead of the full contents.
	* program-name.hh: Add CPP guards.

2008-01-01  Akim Demaille  <demaille@gostai.com>

	Fix automake warning.
	* libport/tests/Makefile.am: By shushing automake.

2007-12-25  Akim Demaille  <demaille@gostai.com>

	More sysexits.
	* sysexits.hh (EX_FAIL): New.

2007-12-24  Akim Demaille  <demaille@gostai.com>

	Disable separate (C& c).
	* separator.hh, separator.hxx: use typename, not class.
	Disable unary separate as an attempt to work around some compiler